--- a/openedx.yaml
+++ b/openedx.yaml
@@ -2,6 +2,7 @@
 # http://open-edx-proposals.readthedocs.io/en/latest/oeps/oep-0002.html#specification
 
 nick: lpm
-oeps: {}
+oeps:
+    oep-18: true
 owner: edx/analytics
 track-pulls: true
