--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
-envlist = py35-django{111,20,21,22},py38-django22,quality
+envlist = py35-django{22},py38-django{22,30},quality
 
 [testenv]
 deps =
-    django111: Django>=1.11,<2.0
-    django20: Django>=2.0,<2.1
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
+    django30: Django>=3.0,<3.1
     -r{toxinidir}/requirements/test.txt
 commands = ./manage.py test --with-coverage --cover-inclusive --cover-branches --cover-html --cover-html-dir=build/coverage/html/ --cover-xml --cover-xml-file=build/coverage/coverage.xml --cover-package=lang_pref_middleware
 
