Replace djnago-test with pytest and remove nose dependency

--- a/requirements/test.in
+++ b/requirements/test.in
@@ -4,7 +4,8 @@
 -r base.txt               # Core dependencies for the cookiecutter
 
 coverage
-django-nose
 edx-lint                  # edX pylint rules and plugins
 pep257                    # PEP 257 doc style validation
 pycodestyle               # PEP 8 compliance validation
+pytest-cov
+pytest-django
