--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,6 @@ current_version = 0.2.0
 commit = True
 
 [bumpversion:file:lang_pref_middleware/__init__.py]
+
+[tool:pytest]
+python_files = test*.py
