--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,8 @@ jobs:
      strategy:
        matrix:
          os: [ubuntu-20.04]
-         python-version: ['3.5','3.8']
+         python-version: ['3.8']
          toxenv: ['django22','quality']
-         exclude:
-           - python-version: '3.5'
-             toxenv: 'quality'
 
      steps:
        - uses: actions/checkout@v1
