--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,20 @@
 [tox]
-envlist = ,py38-django{22,30,31},quality
+envlist = py38-django{22,30,31},quality
 
 [testenv]
-deps = 
+deps =
 	django22: Django>=2.2,<2.3
 	django30: Django>=3.0,<3.1
 	django31: Django>=3.1,<3.2
 	-r{toxinidir}/requirements/test.txt
-setenv = 
+setenv =
 	DJANGO_SETTINGS_MODULE=settings
 commands = pytest --cov-branch  --cov-report=html:build/coverage/html --cov-report=xml:build/coverage/coverage.xml --cov=lang_pref_middleware
 
 [testenv:quality]
-commands = 
+commands =
 	pycodestyle --config=.pep8 lang_pref_middleware
 	pylint --rcfile=.pylintrc lang_pref_middleware
+	# Ignore module level docstrings and all test files
 	pep257 --ignore=D100,D203 --match='(?!test).*py' lang_pref_middleware
 
