--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py38-django{22,30,31},quality
+envlist = py38-django{22,30,31,32},quality
 
 [testenv]
 deps =
 	django22: Django>=2.2,<2.3
 	django30: Django>=3.0,<3.1
 	django31: Django>=3.1,<3.2
+	django32: Django>=3.2,<3.3
 	-r{toxinidir}/requirements/test.txt
 setenv =
 	DJANGO_SETTINGS_MODULE=settings
@@ -15,6 +16,5 @@ commands = pytest --cov-branch  --cov-report=html:build/coverage/html --cov-repo
 commands =
 	pycodestyle --config=.pep8 lang_pref_middleware
 	pylint --rcfile=.pylintrc lang_pref_middleware
-	# Ignore module level docstrings and all test files
 	pep257 --ignore=D100,D203 --match='(?!test).*py' lang_pref_middleware
 
