--- a/requirements/pip.in
+++ b/requirements/pip.in
@@ -1,5 +1,5 @@
 # Core dependencies for installing other packages
 
-pip
+pip<21.3  # pip==21.3 causes ImportError in pip-sync command when running make requirements
 setuptools
 wheel
