--- a/.github/workflows/upgrade-python-requirements.yml
+++ b/.github/workflows/upgrade-python-requirements.yml
@@ -1,6 +1,9 @@
 name: Upgrade Requirements
 
 on:
+  push:
+    branches:
+      - '**'
   schedule:
      - cron: "0 2 * * 2"
   workflow_dispatch:
