--- a/requirements/pip.in
+++ b/requirements/pip.in
@@ -1,4 +1,5 @@
 # Core dependencies for installing other packages
+-c constraints.txt
 
 pip<21.3  # pip==21.3 causes ImportError in pip-sync command when running make requirements
 setuptools
