chore: add reserved keywords linter

--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,10 @@ commands =
 	pylint --rcfile=.pylintrc lang_pref_middleware
 	pep257 --ignore=D100,D203 --match='(?!test).*py' lang_pref_middleware
 
+[testenv:check_keywords]
+whitelist_externals =
+    make
+deps =
+    -r{toxinidir}/requirements/dev.txt
+commands =
+    make check_keywords
