--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,37 @@
 name: Python CI
 
 on:
-   push:
-     branches: [master]
-   pull_request:
-     branches:
-       - '**'
+  push:
+    branches: [master]
+  pull_request:
+    branches:
+    - '**'
 
 
 jobs:
-   run_tests:
-     name: tests
-     runs-on: ${{ matrix.os }}
-     strategy:
-       matrix:
-         os: [ubuntu-20.04]
-         python-version: ['3.8']
-         toxenv: [django22, django30, django31, django32, quality]
+  run_tests:
+    name: tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04]
+        python-version: ['3.8']
+        toxenv: [quality, django32]
 
-     steps:
-       - uses: actions/checkout@v1
-       - name: setup python
-         uses: actions/setup-python@v2
-         with:
-           python-version: ${{ matrix.python-version }}
+    steps:
+    - uses: actions/checkout@v1
+    - name: setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
 
-       - name: Install pip
-         run: pip install -r requirements/pip.txt
+    - name: Install pip
+      run: pip install -r requirements/pip.txt
 
-       - name: Install Dependencies
-         run: make requirements
+    - name: Install Dependencies
+      run: make requirements
 
-       - name: Run Tests
-         env:
-           TOXENV: ${{ matrix.toxenv }}
-         run: tox
+    - name: Run Tests
+      env:
+        TOXENV: ${{ matrix.toxenv }}
+      run: tox
