fix: use latest pylintrc for pylint checks

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ commands = pytest --cov-branch  --cov-report=html:build/coverage/html --cov-repo
 [testenv:quality]
 commands = 
     pycodestyle --config=.pep8 lang_pref_middleware
-    pylint --rcfile=.pylintrc lang_pref_middleware
+    pylint --rcfile=pylintrc lang_pref_middleware
     pep257 --ignore=D100,D203 --match='(?!test).*py' lang_pref_middleware
 
