fix: fix quality failures

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,10 @@ setenv =
 commands = pytest --cov-branch  --cov-report=html:build/coverage/html --cov-report=xml:build/coverage/coverage.xml --cov=lang_pref_middleware
 
 [testenv:quality]
+setenv = 
+    DJANGO_SETTINGS_MODULE=settings
+    PYTHONPATH = .
 commands = 
     pycodestyle --config=.pep8 lang_pref_middleware
     pylint --rcfile=pylintrc lang_pref_middleware
     pep257 --ignore=D100,D203 --match='(?!test).*py' lang_pref_middleware
-
