feat: Adding python3.11 support.

--- a/tox.ini
+++ b/tox.ini
@@ -16,4 +16,4 @@ setenv =
 commands = 
     pycodestyle --config=.pep8 lang_pref_middleware
     pylint --rcfile=pylintrc lang_pref_middleware
-
+    pydocstyle --ignore=D100,D203 --match='(?!test).*py' lang_pref_middleware
