feat: Adding python3.11 support.

--- a/tox.ini
+++ b/tox.ini
@@ -16,3 +16,5 @@ setenv =
 commands = 
     pycodestyle --config=.pep8 lang_pref_middleware
     pylint --rcfile=pylintrc lang_pref_middleware
+    pycodestyle --ignore=D100,D203 --filename='(?!test).*\.py' lang_pref_middleware
+
